Switch back to mpg123.  Remove references to vlc.  Add 'depends' directive to install prereqs automatically
