# api/routers.go
@@ -47,11 +47,6 @@ func NewRouter(apiService Service) http.Handler {
 		//	Stop audio
 		r.Post("/audio/stop", apiService.StopAllAudio)
 		r.Post("/audio/stop/{id}", apiService.StopAudio)
-
-		//	System management
-		r.Get("/system/alsadevices", apiService.GetAlsaDevices)
-		r.Get("/system/config", apiService.GetSystemConfig)
-		r.Put("/system/config", apiService.SetSystemConfig)
 	})
 
 	//	SWAGGER
